.cicd/gke/deploy-gke.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-titanic-demo

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-titanic-demo-webapp
  namespace: ai-titanic-demo
  labels:
    app: ai-titanic-demo-webapp
spec:
  replicas: 1
  revisionHistoryLimit: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: ai-titanic-demo-webapp
  template:
    metadata:
      labels:
        app: ai-titanic-demo-webapp
    spec:
      containers:
      - name: ai-titanic-demo-webapp
        image: qbituniverse/ai-titanic-webapp:latest
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
            add: ["NET_BIND_SERVICE"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-titanic-demo-api
  namespace: ai-titanic-demo
  labels:
    app: ai-titanic-demo-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: ai-titanic-demo-api
  template:
    metadata:
      labels:
        app: ai-titanic-demo-api
    spec:
      restartPolicy: Always
      containers:
      - name: ai-titanic-demo-api
        image: qbituniverse/ai-titanic-api:latest
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
            add: ["NET_BIND_SERVICE"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "400m"
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: ai-titanic-demo-webapp
  namespace: ai-titanic-demo
spec:
  selector:
    app: ai-titanic-demo-webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: ai-titanic-demo-api
  namespace: ai-titanic-demo
spec:
  selector:
    app: ai-titanic-demo-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-titanic-demo-webapp
  namespace: ai-titanic-demo
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ai-titanic-demo-ip
    networking.gke.io/managed-certificates: ai-titanic-demo-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: ai-titanic-demo-webapp
            port:
              number: 80
